<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xm.study.reflect.TestReflectActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_reflect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_reflect" />

            <TextView
                android:id="@+id/tv_init"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_init" />

            <TextView
                android:id="@+id/tv_get_super_class_interface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_super_class_interface" />

            <TextView
                android:id="@+id/tv_get_object"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_object" />

            <TextView
                android:id="@+id/tv_get_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_attribute" />

            <TextView
                android:id="@+id/tv_get_all_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_all_method" />

            <TextView
                android:id="@+id/tv_get_one_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_one_method" />

            <TextView
                android:id="@+id/tv_get_one_attribute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_one_attribute" />

            <TextView
                android:id="@+id/tv_proxy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_proxy" />

            <TextView
                android:id="@+id/tv_int_list_put_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_int_list_put_string" />

            <TextView
                android:id="@+id/tv_update_array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_update_array" />

            <TextView
                android:id="@+id/tv_update_array_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_update_array_size" />

            <TextView
                android:id="@+id/tv_fruit_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_fruit_factory" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
