<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xm.study.notification.NotificationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_notification_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_custom" />

            <TextView
                android:id="@+id/tv_notification_custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_custom_button" />

            <TextView
                android:id="@+id/tv_notification_native_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_show" />

            <TextView
                android:id="@+id/tv_notification_native_show_big_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_show_big_style" />

            <TextView
                android:id="@+id/tv_notification_native_show_permanent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_show_permanent" />

            <TextView
                android:id="@+id/tv_notification_native_show_intent_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_show_intent_activity" />

            <TextView
                android:id="@+id/tv_notification_native_show_intent_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_show_intent_app" />

            <TextView
                android:id="@+id/tv_notification_native_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_clear" />

            <TextView
                android:id="@+id/tv_notification_native_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_native_clear_all" />

            <TextView
                android:id="@+id/tv_notification_progress_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_progress_default" />

            <TextView
                android:id="@+id/tv_notification_progress_default_unsure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_progress_default_unsure" />

            <TextView
                android:id="@+id/tv_notification_progress_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_progress_custom" />

            <TextView
                android:id="@+id/tv_notification_progress_download_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_progress_download_start" />

            <TextView
                android:id="@+id/tv_notification_progress_download_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_progress_download_pause" />

            <TextView
                android:id="@+id/tv_notification_progress_download_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/notification_progress_download_cancel" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
