<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xm.study.dataalgorithm.DataAlgorithmActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_data_algorithm_insert_sort_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_insert_sort_1" />

            <TextView
                android:id="@+id/tv_data_algorithm_bubble_sort_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_bubble_sort_1" />

            <TextView
                android:id="@+id/tv_data_algorithm_bubble_sort_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_bubble_sort_2" />

            <TextView
                android:id="@+id/tv_data_algorithm_quick_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_quick_sort" />

            <TextView
                android:id="@+id/tv_data_algorithm_selection_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_selection_sort" />

            <TextView
                android:id="@+id/tv_data_algorithm_shell_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_shell_sort" />

            <TextView
                android:id="@+id/tv_data_algorithm_sequential_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_sequential_sort" />

            <TextView
                android:id="@+id/tv_bin_tree_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_bin_tree_sort" />

            <TextView
                android:id="@+id/tv_bin_tree_is_same"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_bin_tree_is_same" />

            <TextView
                android:id="@+id/tv_count_1_in_binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/data_algorithm_count_1_in_binary" />


            <!--<TextView
                android:id="@+id/tv_update_array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_update_array" />

            <TextView
                android:id="@+id/tv_update_array_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_update_array_size" />

            <TextView
                android:id="@+id/tv_fruit_factory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/refelect_fruit_factory" />-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
